# brd_parser

./: .clang-tidy  .gitignore  README.md
.github/workflows/: .cmake.yml.swp  clang-format-check.yml  cmake.yml
src/: CMakeLists.txt  CMakePresets.json  compile_commands.json  vcpkg.json
src/app/: CMakeLists.txt  brdview.cpp  brdview.h  main.cpp
src/brd_cli/: CMakeLists.txt  html.cpp  html.h  main.cpp
src/brd_gui/: CMakeLists.txt  brdview.cpp  brdview.h  layer_item.cpp  layer_item.h  layer_model.cpp  layer_model.h  main.cpp  mainwindow.cpp  mainwindow.h
src/brd_gui/test/: CMakeLists.txt  brdview_test.cpp  brdview_test.h  gui_test.cpp  mainwindow_test.cpp  mainwindow_test.h
src/lib/: CMakeLists.txt  type_table.h
src/lib/parser/: CMakeLists.txt  parser.cpp  parser.h  parser_test.cpp
src/lib/printing/: CMakeLists.txt  printers.cpp  printers.h  utils.cpp  utils.h
src/lib/structure/: CMakeLists.txt  cadence_fp.cpp  cadence_fp.h  types.cpp  types.h  utils.cpp  utils.h
src/test/: CMakeLists.txt  test_helpers.cpp  test_helpers.h  test_helpers.impl.h
src/test/data/: .CMakeLists.txt.swp  CMakeLists.txt
src/webapp/: CMakeLists.txt  app_state.cpp  app_state.h  brd_renderer.cpp  brd_renderer.h  file_picker.cpp  file_picker.h  layer_widget.cpp  layer_widget.h  line_shader.cpp  line_shader.h  main.cpp  setup.js  skia.cmake  webapp.cpp  webapp.css  webapp.h  webapp.html
